# cpp23_26_project

./: README.md
01_Makefile/: README.md
01_Makefile/src/: main.cpp
02_cmake_justfile_c26_ixx/: README.md
02_cmake_justfile_c26_ixx/01_cmake_c26_ixx_justfile/: README.md
02_cmake_justfile_c26_ixx/01_cmake_c26_ixx_justfile/cpp23_pthread/: README.md
02_cmake_justfile_c26_ixx/02_justfile_c26_ixx/: README.md
02_cmake_justfile_c26_ixx/02_justfile_c26_ixx/src/: main.cpp
02_cmake_justfile_c26_ixx/03_master_cpp20_modules/: README.md
02_cmake_justfile_c26_ixx/03_master_cpp20_modules/chapter01/a01_math_ixx/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  build.ninja  cmake_install.cmake
02_cmake_justfile_c26_ixx/03_master_cpp20_modules/chapter01/a01_math_ixx/src/: main.cpp
02_cmake_justfile_c26_ixx/03_master_cpp20_modules/chapter01/a01_math_ixx/src/modules/: math.cpp  math.ixx
02_cmake_justfile_c26_ixx/03_master_cpp20_modules/chapter01/a02_math_ixx_part2/: .ninja_log  CMakeCache.txt  CMakeLists.txt  build.ninja  cmake_install.cmake  justfile
02_cmake_justfile_c26_ixx/03_master_cpp20_modules/chapter01/a02_math_ixx_part2/src/: main.cpp
02_cmake_justfile_c26_ixx/03_master_cpp20_modules/chapter01/a02_math_ixx_part2/src/modules/: math_stuff.ixx
02_cmake_justfile_c26_ixx/03_master_cpp20_modules/sample_code/: CMakeLists.txt
02_cmake_justfile_c26_ixx/sample_code_global_ixx_cpp23/: .gitignore  CMakeLists.txt
02_justfile_c26_ixx/: README.md  justfile
02_justfile_c26_ixx/src/ixx_module/: add_module.ixx
cpp23_tutorial/: README.md  justfile
cpp23_tutorial/c++23_print/a01_std_print/: justfile
cpp23_tutorial/improved_error/: README.md  justfile
cpp23_tutorial/improved_error/src/: main.cpp
cpp23_tutorial/std_print/: build.sh  main.cpp
cpp23_tutorial/string_view/: main.cpp
cpp26_training/: CMakeLists.txt  README.md  justfile
cpp26_training/001_cpp26_tutorial/: README.md  justfile
cpp26_training/001_cpp26_tutorial/a01_hello_world_cpp26/: README.md
cpp26_training/001_cpp26_tutorial/a02_std_generator/: README.md
cpp26_training/001_cpp26_tutorial/a03_expected/: README.md
cpp26_training/001_cpp26_tutorial/a05_assum_cond/: README.md
cpp26_training/001_cpp26_tutorial/a06_std_move_only_function/: README.md
cpp26_training/001_cpp26_tutorial/a07_consteaval_if/: README.md
cpp26_training/001_cpp26_tutorial/a08_static_operator/: README.md
cpp26_training/001_cpp26_tutorial/a09_std_flat_map/: README.md
cpp26_training/test_c/: justfile
cpp26_training/test_c/src/: main.cpp
cpp_experimental/: README.md
string_nullptr/: main.cpp
string_view/: main
(+76 files in other folders)
